# cmr

./: .gitignore  demo.py  main.py  pyproject.toml  train.md
data/: base.py  cub.py  food.py
misc/: mesh_view.py
nnutils/: loss_utils.py  perceptual_loss.py  predictor.py  smr.py  train_utils.py
nnutils/perceptual_similarity/util/: util.py
