[tool.poetry]
name = "cmr"
version = "0.1.0"
description = ""
authors = ["nekanat <nekanat.stock@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.8.1"
torchvision = "^0.9.1"
absl-py = "^0.12.0"
h5py = "^3.2.1"
imageio = "^2.9.0"
matplotlib = "^3.4.1"
opencv-python = "^4.5.1"
Pillow = "^8.2.0"
progressbar = "^2.5"
protobuf = "^3.15.8"
PyOpenGL = "^3.1.5"
scikit-image = "^0.18.1"
torchfile = "^0.1.0"
tqdm = "^4.60.0"
visdom = "^0.1.8"
ipdb = "^0.13.7"
trimesh = "^3.9.16"
pyglet = "^1.5.16"
mlflow = "^1.18.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
